--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.15.3",
+    "jschardet": "^3.1.4",
     "solid-js": "^1.9.7"
   },
   "devDependencies": {
